# bazel-docker-example

./: Jenkinsfile  WORKSPACE  package.json
src/hello-world/: hello-world.component.ts
src/server/: BUILD.bazel  app-server.ts
