load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
  name = "app_server",
  srcs = [":app-server.ts"],
  deps = ["@npm//express", "@npm//compression"]
)

nodejs_image(
    name = "app_image",
    entry_point = "angular_bazel_example/src/server/app-server.js",
    node_modules = "@npm//:node_modules",
    data = ["//src:prodapp", ":app_server"]
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push"
)

container_push(
   name = "push",
   image = ":app_image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "[TODO: ADD YOUR OWN REPO]",
   tag = "1"
)